connected front and back

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   width: 100%;
   background-image: url("../../assets/images/header.png");
+  background-size: cover;
 
   .inner_cont {
     background-color: rgba(4, 47, 54, 0.4);
