--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -22,11 +22,12 @@
       align-items: center;
       height: 100%;
 
-      span {
+      a {
         display: flex;
         gap: 10px;
         align-items: center;
         margin-bottom: 10px;
+        color: white;
 
         h3 {
           color: white;
