--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -15,6 +15,7 @@
     width: 90%;
     margin: 0 auto;
     height: 80%;
+    flex-wrap: wrap;
 
     > article {
       display: flex;
@@ -43,11 +44,26 @@
           text-align: center;
           line-height: 1.4;
         }
-
-
       }
     }
 
 
   }
+
+  @media (min-width: 320px) and (max-width: 745px) {
+    height: 100%;
+    padding: 40px 0;
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+
+      :nth-last-child(3) {
+        order: 1;
+      }
+    }
+  }
+
+
 }
