--- a/src/components/Cards/Card/Card.module.scss
+++ b/src/components/Cards/Card/Card.module.scss
@@ -31,9 +31,30 @@
       font-weight: bold;
 
     }
+
     h4 {
       padding: 4px 0;
       margin-top: -13px;
+    }
+  }
+
+  @media (min-width: 1024px) {
+
+    width: 310px !important;
+
+    aside {
+      width: 310px !important;
+    }
+
+  }
+
+
+  @media (max-width: 430px) {
+
+    width: 300px !important;
+
+    aside {
+      width: 300px !important;
     }
   }
 }
