--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -8,7 +8,7 @@
     width: 90%;
     height: 100%;
     padding: 40px 0;
-    gap: 20px;
+    gap: 50px;
     margin: 0 auto;
 
     > .title {
@@ -54,5 +54,35 @@
 
     }
   }
+
+
+  .cont {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    overflow: hidden;
+    gap: 20px;
+  }
+
+  @media (min-width: 1024px) {
+    .cont {
+      width: 95%;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+  }
+  @media (max-width: 425px) {
+    .cont {
+      width: 100%;
+      justify-content: center;
+      align-items: flex-start;
+      column-gap: 20px;
+    }
+  }
+
+
+
 
 }
