--- a/src/components/Cards/Card/Card.module.scss
+++ b/src/components/Cards/Card/Card.module.scss
@@ -4,6 +4,8 @@
   gap: 0;
   position: relative;
   align-items: center;
+  width: 322px;
+  height: 398px;
 
   img {
     margin-bottom: -80px;
@@ -11,6 +13,7 @@
     border-radius: 80px;
     width: 250px;
     height: 290px;
+    box-shadow: 0 3px 10px 2px rgba(4, 47, 54, 0.25);
   }
 
   aside {
@@ -22,37 +25,33 @@
     flex-direction: column;
     justify-content: flex-end;
     border-radius: 70px;
-    gap: 0px;
+    gap: 0;
+    padding-bottom: 13px;
 
     p {
       padding: 10px 0;
       color: #FF5900;
       font-size: 18px;
       font-weight: bold;
-
     }
 
     h4 {
+      font-size: 16px;
       padding: 4px 0;
-      margin-top: -13px;
+      display: inline-block;
     }
   }
 
   @media (max-width: 1024px) {
-
-    width: 310px !important;
-
+    width: 322px !important;
     aside {
       width: 310px !important;
     }
-
   }
 
 
   @media (max-width: 430px) {
-
     width: 300px !important;
-
     aside {
       width: 300px !important;
     }
