--- a/src/components/Events/Events.module.scss
+++ b/src/components/Events/Events.module.scss
@@ -1,17 +1,34 @@
-.Events{
+.Events {
   width: 90%;
+  height: 100%;
   margin: auto;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 50px 0;
 
   align-items: center;
 
-  .line{
-    width: 16%;
-    height: 4px;
-    background: red;
+  section {
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 
+    h2 {
+      font-size: 28px;
+      text-transform: uppercase;
+
+    }
+
+    .line {
+      width: 180px !important;
+      height: 4px;
+      background-color: red;
+    }
   }
+
+
 }
