--- a/src/components/Events/swiper.scss
+++ b/src/components/Events/swiper.scss
@@ -1,3 +1,46 @@
+
+.eventsSwiper {
+  position: relative;
+  padding-top: 10px;
+
+
+}
+
+.swiper-button-prev-events,
+.swiper-button-next-events {
+
+  z-index: 10;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(0, 217, 252, 0.4); /* Полупрозрачный фон */
+  border-radius: 50%;
+  color: rgba(19, 19, 19, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
+
+}
+.swiper-button-prev-events {
+  left: 46% !important;
+  position: absolute;
+  top: 30px;
+  transform: translateY(-50%);
+
+  &::after{
+    color: red !important;
+  }
+}
+
+.swiper-button-next-events {
+  right: 46% !important;
+  position: absolute;
+  top: 30px;
+  transform: translateY(-50%);
+}
+
+// Общие стили для Swiper
 .swiper {
   width: 100%;
   height: 100%;
@@ -10,33 +53,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-
-.mySwiper {
-  position: relative;
-  padding-top: 10px;
-}
-
-.swiper-button-prev, .swiper-button-next {
-  position: absolute;
-  top: 40px;
-  z-index: 10;
-  width: 40px;
-  height: 40px;
-  background-color: rgba(4, 47, 54, 0.4); /* полупрозрачный фон */
-  border-radius: 50%;
-  color: rgba(4, 47, 54, 0.8);
-}
-
-.swiper-button-prev {
-  left: 46%;
-}
-
-.swiper-button-next {
-  right: 46%;
-}
-
-.swiper-button-prev::after, .swiper-button-next::after {
-  font-size: 22px;
 }
