fix arrows in slider

--- a/src/components/Events/swiper.scss
+++ b/src/components/Events/swiper.scss
@@ -12,7 +12,7 @@
   z-index: 10;
   width: 40px;
   height: 40px;
-  background-color: rgba(0, 217, 252, 0.4); /* Полупрозрачный фон */
+  background-color: rgb(172, 185, 187); /* Полупрозрачный фон */
   border-radius: 50%;
   color: rgba(19, 19, 19, 0.8);
   display: flex;
