added burder menu

--- a/src/components/Gallery/GalleryImage/GalleryImage.module.scss
+++ b/src/components/Gallery/GalleryImage/GalleryImage.module.scss
@@ -2,11 +2,11 @@
   cursor: pointer;
   width: 380px;
   height: 564px;
-  transform-origin: right center; // Трансформация будет начинаться с правой стороны
+  transform-origin: right center;
   transition: transform 0.4s ease;
 
   &:hover {
-    transform: scale(1.15); // Увеличиваем масштаб
+    transform: scale(1.15);
   }
   img {
     width: 100%;
