--- a/src/components/Reviews/reviewsSwiper.scss
+++ b/src/components/Reviews/reviewsSwiper.scss
@@ -9,7 +9,7 @@
   z-index: 10;
   width: 40px;
   height: 40px;
-  background-color: rgb(172, 185, 187); /* Полупрозрачный фон */
+  background-color: rgb(172, 185, 187);
   border-radius: 50%;
   border: none;
   color: rgba(19, 19, 19, 0.8);
