--- a/src/components/CategorySlider/CategorySlider.module.scss
+++ b/src/components/CategorySlider/CategorySlider.module.scss
@@ -16,7 +16,7 @@
 
   .categoryButton {
     padding: 10px 20px;
-    background-color: #f0cfcf;
+    background-color: #EAEBEC;
     border-radius: 20px;
     border: none;
     color: #333;
@@ -26,11 +26,11 @@
     white-space: nowrap;
 
     &:hover {
-      background-color: #c2a2a2;
+      background-color: #ACB9BB;
     }
 
     &.active {
-      background-color: #466848;
+      background-color: #3C916E;
       color: white;
     }
   }
