--- a/src/components/Events/Events.module.scss
+++ b/src/components/Events/Events.module.scss
@@ -26,7 +26,7 @@
     .line {
       width: 180px !important;
       height: 4px;
-      background-color: red;
+      background-color: #333;
     }
   }
 
