--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -1,4 +1,20 @@
-$line-color: #678853;
+.burgerMenu {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 5px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+
+  .burgerIcon {
+    width: 25px;
+    height: 3px;
+    background-color: #333;
+    border-radius: 2px;
+    transition: all 0.3s ease;
+  }
+}
 
 .nav {
   width: 100%;
@@ -10,32 +26,122 @@ $line-color: #678853;
   background-color: transparent;
   top: 65px;
   left: 0;
+  z-index: 1000;
 
   ul {
-    width: 980px !important;
+    width: 1024px;
     height: 65px;
-
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    gap: 10px;
+    justify-content: center;
+    gap: 20px;
     border-radius: 10px;
     background: var(--basic-text-white, #FFF);
-    box-shadow: 0px 0px 10px 0px rgba(4, 47, 54, 0.15), 0px 241px 80px 0px rgba(4, 47, 54, 0.00), 0px 154px 70px 0px rgba(4, 47, 54, 0.03), 0px 87px 60px 0px rgba(4, 47, 54, 0.10), 0px 39px 45px 0px rgba(4, 47, 54, 0.17), 0px 10px 30px 0px rgba(4, 47, 54, 0.20);
-
+    box-shadow: 0px 0px 10px 0px rgba(4, 47, 54, 0.15), 0px 241px 80px 0px rgba(4, 47, 54, 0.00),
+    0px 154px 70px 0px rgba(4, 47, 54, 0.03), 0px 87px 60px 0px rgba(4, 47, 54, 0.10),
+    0px 39px 45px 0px rgba(4, 47, 54, 0.17), 0px 10px 30px 0px rgba(4, 47, 54, 0.20);
 
     li {
       a {
-        padding: 15px 35px;
+        padding: 15px 25px;
+        color: rgba(4, 47, 54, 0.80);
+        font-size: 18px;
 
+        &:hover {
+          color: #FF5900;
+        }
+      }
 
+      button {
+        padding: 7px 14px;
+        border-radius: 7px;
+        background-color: #042F36;
+        border: none;
+        color: white;
+        font-size: 18px;
 
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
   }
 
-  > img {
-    height: 170px;
+  span {
+    display: none;
+  }
+
+  &.active {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
 
+@media (max-width: 1024px) {
+  .nav {
+    position: fixed;
+    top: 65px;
+    left: 0;
+    z-index: 100;
+
+    ul {
+      width: 900px;
+      padding: 15px 15px;
+      gap: 10px;
+      background-color: white;
+    }
+
+    span {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 769px) {
+  .nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100vh;
+    background: rgb(255, 255, 255);
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: all 0.5s ease;
+
+    ul {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: 50px;
+    }
+
+    span {
+      display: inline-block;
+      position: absolute;
+      right: 50px;
+      top: 50px;
+    }
+  }
+
+  .nav.active {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  .burgerMenu {
+    display: block;
+
+    .burgerIcon {
+      width: 25px;
+      height: 3px;
+      background-color: #000000;
+      border-radius: 2px;
+      transition: all 0.3s ease;
+    }
+  }
+}
