added adaptive for header and navbar

--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -13,3 +13,27 @@
     flex-shrink: 0;
   }
 }
+
+@media (max-width: 1024px) {
+  .Logo {
+    width: 256px;
+    height: 80vh;
+
+    img {
+      width: 256px;
+      height: 274px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .Logo {
+    width: 256px;
+    height: 274px;
+
+    img {
+      width: 256px;
+      height: 274px;
+    }
+  }
+}
