--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -51,7 +51,7 @@
         .text_cont {
           position: relative;
           z-index: 2;
-          padding: 20px  0px;
+          padding: 20px 0px;
 
 
           p {
@@ -75,5 +75,103 @@
       }
     }
   }
+}
 
+@media (max-width: 1024px) {
+  .header {
+    .inner_cont {
+      div {
+        gap: 0;
+
+        h2 {
+          font-size: 31px;
+        }
+
+        .wrapper {
+          .blur {
+            z-index: 2;
+          }
+
+          .text_cont {
+            padding: 10px 0;
+
+            p {
+              font-size: 16px;
+
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    height: 85vh;
+
+    .inner_cont {
+      div {
+        gap: 0;
+
+        align-items: center;
+
+        h2 {
+          font-size: 31px;
+        }
+
+        .wrapper {
+          .blur {
+            z-index: 2;
+          }
+
+          .text_cont {
+            padding: 10px 0;
+
+            p {
+              font-size: 16px;
+
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+@media (max-width: 390px) {
+  .header {
+    width: 390px;
+    height: 100vh;
+
+    .inner_cont {
+      div {
+        gap: 10px;
+        align-items: flex-start;
+
+        h2 {
+          font-size: 24px;
+          //margin: 0 !important;
+        }
+
+        .wrapper {
+          .blur {
+            display: none;
+          }
+
+          .text_cont {
+            padding: 0;
+
+            p {
+              font-size: 16px;
+              padding: 0;
+              line-height: 26px;
+
+            }
+          }
+        }
+      }
+    }
+  }
 }
