--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -17,7 +17,19 @@
       width: 100%;
       overflow: hidden;
 
+    }
+  }
+}
 
+@media (max-width: 768px) {
+  .Layout{
+    .navbar{
+
+      section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
     }
   }
 }
