added adaptive for events card and meal list cards

--- a/src/components/Cards/Card/Card.module.scss
+++ b/src/components/Cards/Card/Card.module.scss
@@ -44,6 +44,7 @@
 
   @media (max-width: 1024px) {
     width: 322px !important;
+    height: 398px !important;
     aside {
       width: 310px !important;
     }
