--- a/src/components/Events/Event/Event.module.scss
+++ b/src/components/Events/Event/Event.module.scss
@@ -7,7 +7,7 @@
   height: 215px;
   //border: 1px solid red;
 
-  overflow: hidden;
+  //overflow: hidden;
 
   > article {
     display: flex;
@@ -51,7 +51,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 10px ;
+    padding: 10px;
 
     p {
       overflow: hidden;
@@ -84,6 +84,35 @@
       box-shadow: 0px 4px 15px 0px rgba(60, 145, 110, 0.15);
     }
   }
+}
 
+@media (max-width: 1024px) {
+  .Event {
+    height: 200px;
 
+    article {
+      width: 241px;
+
+      h3 {
+        font-size: 20px;
+      }
+
+      p {
+        font-size: 16px;
+      }
+    }
+
+    img {
+      width: 241px;
+      height: 100%;
+    }
+
+    aside {
+      width: 424px;
+
+      p {
+        line-height: 1.5;
+      }
+    }
+  }
 }
