--- a/src/components/MealsList/MealsList.module.scss
+++ b/src/components/MealsList/MealsList.module.scss
@@ -2,12 +2,9 @@
   display: flex;
   justify-content: flex-start;
   width: 92%;
-  margin: auto;
+  margin: 50px auto 0;
 
-  margin-top: 50px;
-
-
-  ul {
+  .cont {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -16,5 +13,17 @@
 
   li {
     list-style: none;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .cards_cont {
+
+    .cont {
+      width: 100%;
+      display: flex;
+      justify-content: center !important;
+      align-items: center;
+    }
   }
 }
