--- a/src/components/Reviews/Reviews.module.scss
+++ b/src/components/Reviews/Reviews.module.scss
@@ -21,7 +21,6 @@
       color: white;
       font-size: 28px;
       text-transform: uppercase;
-
     }
 
     .line {
@@ -37,17 +36,61 @@
     width: 100%;
     position: relative;
     background-color: transparent;
-
-
   }
 
   .box {
     width: 100%;
-
     display: flex;
     justify-content: space-around;
   }
 
+  // Breakpoint for 1024px
+  @media (max-width: 1024px) {
+    padding: 30px 0 15px;
 
+    section {
+      h2 {
+        font-size: 24px;
+      }
+
+      .line {
+        width: 150px !important;
+      }
+    }
+
+    .swiper_cont {
+      height: auto;
+      width: 100%;
+    }
+
+    .box {
+      flex-direction: row;
+      gap: 20px;
+      overflow: hidden !important;
+    }
+  }
+
+  // Breakpoint for 768px
+  @media (max-width: 768px) {
+    padding: 20px 0 10px;
+
+    section {
+      h2 {
+        font-size: 22px;
+      }
+
+      .line {
+        width: 130px !important;
+      }
+    }
+
+    .swiper_cont {
+      height: auto;
+    }
+
+    .box {
+      flex-direction: column;
+      gap: 15px;
+    }
+  }
 }
-
