--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -10,20 +10,22 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
+
     section {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 20px;
 
-      h2{
+      h2 {
         font-size: 24px;
         font-style: normal;
         text-transform: uppercase;
         font-weight: 700;
       }
-      .small_line{
-        height: 2px ;
+
+      .small_line {
+        height: 2px;
         width: 150px;
         background-color: #3C916E;
       }
@@ -33,6 +35,70 @@
       width: 100%;
       display: flex;
       justify-content: center;
+
+    }
+  }
+}
+
+.slider {
+  width: 80%; // Задаем ширину для слайдера на мобильных экранах
+  .swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
+
+@media (max-width: 1024px) {
+  .gallery {
+    .inner_cont {
+      gap: 30px;
+
+      section {
+        h2 {
+          font-size: 22px;
+        }
+
+        .small_line {
+          width: 120px;
+        }
+      }
+
+      .slider {
+        width: 100%;
+        display: flex;
+        position: relative;
+
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .gallery {
+    .inner_cont {
+      column-gap: 20px;
+
+      section {
+        h2 {
+          font-size: 20px;
+        }
+
+        .small_line {
+          width: 100px;
+        }
+      }
 
     }
   }
