--- a/src/components/Cards/swiperCategories.scss
+++ b/src/components/Cards/swiperCategories.scss
@@ -30,6 +30,10 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+
+  @media (max-width: 390px) {
+    left: -40px;
+  }
 }
 
 .swiper-button-next-categories {
@@ -37,4 +41,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  @media (max-width: 390px) {
+    right: -40px;
+  }
 }
