--- a/src/components/Events/Event/Event.module.scss
+++ b/src/components/Events/Event/Event.module.scss
@@ -117,9 +117,10 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px) and (min-width: 744px) {
   .Event {
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -137,10 +138,12 @@
       grid-row-start: 2;
       gap: 10px;
       padding: 0;
+      padding-right: 5px;
 
       p {
         -webkit-line-clamp: 4;
         margin-bottom: 10px;
+
       }
     }
 
@@ -153,33 +156,58 @@
 
 @media (max-width: 390px) {
   .Event {
-    width: 100%;
+    width: 340px !important;
+    height: 360px !important;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(3, 1fr);
-
+    gap: 5px;
+    //border: 1px salmon solid;
+    margin:  10px auto;
 
     article {
-      width: 100%;
+      width: 340px !important;
+      margin: 0 auto;
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       padding: 0;
-    }
-    img {
-      grid-row-start: 3;
-    }
+      gap:5px;
 
-    aside {
-      grid-row-start: 2;
-      gap: 10px;
-      padding: 0;
+      h3 {
+        font-size: 16px;
+      }
 
       p {
-        -webkit-line-clamp: 4;
-        margin-bottom: 10px;
+
+        font-size: 10px;
       }
     }
 
+    img {
+      width: 100%;
+      grid-row-start: 2;
+    }
+
+    aside {
+      width: 340px !important;
+      grid-row-start: 3;
+      gap: 0px;
+      padding: 0;
+      margin-top: 10px;
+
+      p {
+        -webkit-line-clamp: 4;
+        margin-bottom: 12px;
+        font-size: 10px;
+      }
+
+      a {
+        width: 100px;
+        padding: 5px 10px;
+        font-size: 14px;
+        height: 31px;
+      }
+    }
 
 
   }
