--- a/src/components/Events/swiper.scss
+++ b/src/components/Events/swiper.scss
@@ -6,21 +6,57 @@
 
 }
 
-.eventsSwiper-item{
+.test {
+  width: 100%;
+  height: 100vh !important;
+  position: relative;
+
+  @media (max-width: 1440px) {
+    height: 70vh !important;
+  }
+  @media (max-width: 1024px) {
+    height: 82vh !important;
+    gap: 40px;
+    justify-content: center;
+  }
+  @media (max-width: 768px) {
+    height: 115vh !important;
+  }
+  @media (max-width: 390px) {
+    height: 170vh !important;
+  }
+
+
+}
+.eventsSwiper-item {
   gap: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
 
   @media (max-width: 1024px) {
+    height: 75vh !important;
     gap: 40px;
+    justify-content: center;
   }
 
+  @media (max-width: 768px) {
+    height: 115vh !important;
+    overflow: visible;
+  }
+
+
+  @media (max-width: 390px) {
+    gap: 20px;
+    justify-content: center;
+    overflow: visible !important;
+  }
 }
+
+
 
 .swiper-button-prev-events,
 .swiper-button-next-events {
-
   z-index: 10;
   width: 40px;
   height: 40px;
@@ -30,34 +66,29 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
-
-
 }
+
+
 .swiper-button-prev-events {
   left: 46% !important;
   position: absolute;
   top: 30px;
   transform: translateY(-50%);
 
-  &::after{
+  &::after {
     color: red !important;
   }
 
   @media (max-width: 1024px) {
     left: 44% !important;
   }
-}
-
-.test{
-  height: 100vh;
-  width: 100%;
-  position: relative;
-
-  @media (max-width: 1024px) {
-    height: 110vh !important;
+  @media (max-width: 390px) {
+    left: 37% !important;
+    top: 20px;
   }
+
 }
+
 
 .swiper-button-next-events {
   right: 46% !important;
@@ -68,9 +99,19 @@
   @media (max-width: 1024px) {
     right: 44% !important;
   }
+
+  @media (max-width: 390px) {
+    right: 37% !important;
+    top: 20px;
+  }
 }
 
-// Общие стили для Swiper
+.eventsSwiper-item {
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
