--- a/src/components/Gallery/gallerySwiper.scss
+++ b/src/components/Gallery/gallerySwiper.scss
@@ -1,4 +1,3 @@
-// Общие стили для Swiper
 .swiper {
   width: 100%;
   height: 100%;
@@ -26,8 +25,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
-
 }
 
 .swiper-button-prev-img {
@@ -65,13 +62,13 @@
   }
 
   @media (max-width: 1024px) {
-    right: 45.5% !important;
+    display: none ;
   }
-  @media (max-width: 1024px) {
-    display: block;
-    right: 4% !important;
-    top: 40% !important;
-  }
+  //@media (max-width: 1024px) {
+  //  display: block;
+  //  right: 4% !important;
+  //  top: 40% !important;
+  //}
 
   @media (max-width: 425px) {
     display: none;
