--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  height: 365px;
+  height: 656px;
 
   display: flex;
   flex-direction: column;
@@ -10,12 +10,27 @@
 
   .container {
     display: flex;
-    align-items: flex-start;
-    justify-content: space-around;
-    width: 90%;
-    margin: 0 auto;
-    height: 80%;
-    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 30px;
+
+    div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+
+      h1{
+        color: white;
+        font-size: 32px;
+
+      }
+
+      .small_line{
+        width: 100px;
+        height: 2px;
+        background-color: white;
+      }
+    }
 
     > article {
       display: flex;
@@ -37,12 +52,16 @@
       }
 
       ul {
+        width: 100%;
         li {
+          width: 100%;
           display: flex;
+          justify-content: space-between;
           color: white;
           padding: 9px 0;
           text-align: center;
           line-height: 1.4;
+          gap: 10px;
         }
       }
     }
