--- a/src/components/Gallery/gallerySwiper.scss
+++ b/src/components/Gallery/gallerySwiper.scss
@@ -46,7 +46,7 @@
     left: 4% !important;
     display: block;
   }
-  @media (max-width: 425px) {
+  @media (max-width: 430px) and (min-width: 390px){
     display: none;
   }
 }
@@ -64,13 +64,14 @@
   @media (max-width: 1024px) {
     display: none ;
   }
-  //@media (max-width: 1024px) {
-  //  display: block;
-  //  right: 4% !important;
-  //  top: 40% !important;
-  //}
 
-  @media (max-width: 425px) {
+
+  @media (max-width: 770px) {
+    right: 4% !important;
+    display: block;
+  }
+
+  @media (max-width: 430px) and (min-width: 390px){
     display: none;
   }
 }
