--- a/src/components/Reviews/reviewsSwiper.scss
+++ b/src/components/Reviews/reviewsSwiper.scss
@@ -71,6 +71,9 @@
     right: 44.5% !important;
   }
 
+  @media (max-width: 450px) {
+    right: 37% !important;
+  }
   @media (max-width: 390px) {
     right: 37% !important;
   }
