--- a/src/components/Events/Event/Event.module.scss
+++ b/src/components/Events/Event/Event.module.scss
@@ -155,7 +155,7 @@
   }
 }
 
-@media (max-width: 390px) {
+@media (max-width: 450px) {
   .Event {
     width: 340px !important;
     height: 360px !important;
@@ -186,6 +186,7 @@
 
     img {
       width: 100%;
+      height: 200px;
       grid-row-start: 2;
     }
 
