--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -51,7 +51,7 @@
         .text_cont {
           position: relative;
           z-index: 2;
-          padding: 20px 0px;
+          padding: 20px 0;
 
 
           p {
@@ -139,6 +139,42 @@
   }
 }
 
+
+@media (max-width: 450px) {
+  .header {
+    width: 100%;
+    height: 100vh;
+
+    .inner_cont {
+      div {
+        gap: 10px;
+        align-items: flex-start;
+
+        h2 {
+          font-size: 24px;
+          //margin: 0 !important;
+        }
+
+        .wrapper {
+          .blur {
+            display: none;
+          }
+
+          .text_cont {
+            padding: 0;
+
+            p {
+              font-size: 16px;
+              padding: 0;
+              line-height: 26px;
+
+            }
+          }
+        }
+      }
+    }
+  }
+}
 
 @media (max-width: 390px) {
   .header {
