--- a/src/components/Reserve/Reserve.module.scss
+++ b/src/components/Reserve/Reserve.module.scss
@@ -33,6 +33,19 @@
     transform: translateX(0%);
 
   }
+  @media (max-width: 450px) {
+    position: fixed;
+    height: 130vh !important;
+    padding: 40px;
+    width: 769px;
+    top: -110px;
+    left: -170px;
+
+    //top: -90px;
+    //left: -648.5px;
+    transform: translateX(0%);
+
+  }
 
   @media (max-width: 390px) {
     position: fixed;
@@ -101,6 +114,26 @@
     }
   }
 
+  @media (max-width: 450px) {
+    width: 350px !important;
+    height: 810px !important;
+    padding:  20px;
+
+    form{
+      height: 100%;
+      overflow: hidden;
+
+      .row{
+        display: flex;
+        flex-direction: column;
+        input{
+          padding: 5px;
+        }
+      }
+
+    }
+  }
+
   @media (max-width: 390px) {
     width: 350px !important;
     height: 810px !important;
@@ -139,7 +172,7 @@
   font-size: 28px;
   cursor: pointer;
 
-  @media (max-width: 390px) {
+  @media (max-width: 450px) {
     top: 10px;
     right: 10px;
     font-size: 22px;
