--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -177,6 +177,7 @@
     display: block;
     padding: 10px;
     border-radius: 10px;
+
     background: var(--basic-text-white, #FFF);
     box-shadow: 0px 0px 10px 0px rgba(4, 47, 54, 0.15), 0px 241px 80px 0px rgba(4, 47, 54, 0.00), 0px 154px 70px 0px rgba(4, 47, 54, 0.03), 0px 87px 60px 0px rgba(4, 47, 54, 0.10), 0px 39px 45px 0px rgba(4, 47, 54, 0.17), 0px 10px 30px 0px rgba(4, 47, 54, 0.20);
 
@@ -186,6 +187,10 @@
       background-color: #000000;
       border-radius: 2px;
       transition: all 0.3s ease;
+    }
+
+    @media (max-width: 450px) {
+      margin: 10px 0;
     }
   }
 
@@ -216,5 +221,10 @@
 
   &:hover {
     cursor: pointer;
+  }
+
+  @media (max-width: 450px) {
+    top: 40px;
+    right: 10px;
   }
 }
