--- a/src/components/Events/Events.module.scss
+++ b/src/components/Events/Events.module.scss
@@ -2,7 +2,7 @@
   width: 90%;
   height: 100%;
   margin: auto;
-  overflow: hidden;
+  //overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 1rem;
