update new design

--- a/src/components/CategorySlider/CategorySlider.module.scss
+++ b/src/components/CategorySlider/CategorySlider.module.scss
@@ -4,9 +4,12 @@
   padding: 10px 0;
   position: relative;
 
+  background-color: #042F36;
   .category_swiper {
     padding: 0 40px;
   }
+
+
 
   .categorySlide {
     width: auto;
@@ -17,7 +20,7 @@
   .categoryButton {
     padding: 10px 20px;
     background-color: #EAEBEC;
-    border-radius: 20px;
+    border-radius: 8px;
     border: none;
     color: #333;
     font-size: 16px;
