--- a/src/components/Gallery/gallerySwiper.scss
+++ b/src/components/Gallery/gallerySwiper.scss
@@ -46,7 +46,7 @@
     left: 4% !important;
     display: block;
   }
-  @media (max-width: 430px) and (min-width: 390px){
+  @media (max-width: 500px) {
     display: none;
   }
 }
@@ -71,7 +71,7 @@
     display: block;
   }
 
-  @media (max-width: 430px) and (min-width: 390px){
+  @media (max-width: 500px) {
     display: none;
   }
 }
