--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -1,21 +1,23 @@
 .cards {
-  padding: 20px;
+  //padding: 20px;
   background-color: #fff;
   min-height: 100vh;
 
   .title {
     text-align: center;
-    padding-bottom: 30px;
+    padding: 30px 0;
+    background-color: #042F36;
 
     h1 {
       font-size: 2.5rem;
       margin: 0;
+      color: white;
     }
 
     .small_line {
-      width: 120px;
+      width: 160px;
       height: 3px;
-      background-color: #333;
+      background-color: #ffffff;
       margin: 20px auto 10px;
     }
   }
