--- a/src/components/Cards/swiperCategories.scss
+++ b/src/components/Cards/swiperCategories.scss
@@ -31,8 +31,8 @@
   top: 50%;
   transform: translateY(-50%);
 
-  @media (max-width: 390px) {
-    left: -40px;
+  @media (max-width: 500px) {
+    display: none;
   }
 }
 
@@ -41,7 +41,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  @media (max-width: 390px) {
-    right: -40px;
+  @media (max-width: 500px) {
+    display: none;
   }
 }
