--- a/src/components/Events/Event/Event.module.scss
+++ b/src/components/Events/Event/Event.module.scss
@@ -1,15 +1,11 @@
 
 .Event {
-  width: 100%;
+  max-width: 90%;
   display: flex;
   align-items: flex-start;
-  justify-content: center;
   gap: 10px;
   height: 215px;
-  //border: 1px solid red;
-
-  //overflow: hidden;
-
+  margin: 0 auto 10px auto;
   > article {
     display: flex;
     flex-direction: column;
@@ -39,15 +35,12 @@
   }
 
   img {
-    //border: 1px solid green;
     height: 100%;
-
   }
 
   aside {
     height: 100%;
     width: 648px;
-    //border: 1px solid black;
     flex: 1 1;
     display: flex;
     flex-direction: column;
@@ -119,9 +112,10 @@
   }
 }
 
-@media (max-width: 768px) and (min-width: 744px) {
+@media (max-width: 768px)  {
   .Event {
-    width: 660px;
+    max-width: 660px;
+    height: auto;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -146,7 +140,7 @@
       justify-content: space-between;
       padding: 0;
 
-      h3{
+      h3 {
         width: 400px !important;
         word-break: break-word;
       }
@@ -169,28 +163,29 @@
     }
 
 
-
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 660px) {
   .Event {
     width: 340px !important;
-    height: 360px !important;
+    height: 240px !important;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 5px;
     //border: 1px salmon solid;
-    margin:  10px auto;
+    margin: 10px auto;
+
 
     article {
       width: 340px !important;
       margin: 0 auto;
       display: flex;
       flex-direction: column;
+
       padding: 0;
-      gap:5px;
+      gap: 15px;
 
       h3 {
         font-size: 16px;
@@ -204,7 +199,7 @@
 
     img {
       width: 100%;
-      height: 200px;
+      height: 180px;
       grid-row-start: 2;
     }
 
