--- a/src/components/Events/Events.module.scss
+++ b/src/components/Events/Events.module.scss
@@ -1,32 +1,36 @@
 .Events {
-  width: 90%;
-  height: 100%;
-  margin: auto;
-  //overflow: hidden;
+  max-width: 1440px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 50px 0;
+  padding: 0 0 50px 0;
+
 
   align-items: center;
 
   section {
-    padding: 20px 0;
+    padding: 50px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    background-color: #042F36;
+    width: 100%;
+
+    position: relative;
+    height: 250px;
 
     h2 {
       font-size: 28px;
       text-transform: uppercase;
-
+      color: white;
     }
 
     .line {
       width: 180px !important;
       height: 4px;
-      background-color: #333;
+      background-color: #ffffff;
     }
   }
 
