--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -2,7 +2,9 @@
   height: 100vh;
   width: 100%;
   padding: 20px 0;
-overflow:hidden ;
+  overflow: hidden;
+  background-color: #042F36;
+
   .inner_cont {
     height: 100%;
     display: flex;
@@ -22,12 +24,13 @@ overflow:hidden ;
         font-style: normal;
         text-transform: uppercase;
         font-weight: 700;
+        color: white;
       }
 
       .small_line {
         height: 2px;
         width: 150px;
-        background-color: #3C916E;
+        background-color: white;
       }
     }
 
@@ -42,6 +45,7 @@ overflow:hidden ;
 
 .slider {
   width: 80%;
+
   .swiper {
     width: 100%;
     height: 100%;
