--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,11 +6,10 @@
   background-size: cover;
 
   .inner_cont {
-    //background-color: rgba(4, 47, 54, 0.4);
     width: 100%;
     height: 100%;
 
-    background: var(--basic-text-30, rgba(4, 47, 54, 0.30));
+    background: rgba(4, 47, 54, 0.30);
 
     > div {
       z-index: 3;
