--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,14 +1,15 @@
 .Layout {
-  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+
 
   .navbar {
 
     position: relative;
-
+    background-color: #042F36;
     width: 100%;
     height: 100%;
 
@@ -22,10 +23,9 @@
 }
 
 @media (max-width: 768px) {
-  .Layout{
-    .navbar{
-
-      section{
+  .Layout {
+    .navbar {
+      section {
         display: flex;
         flex-direction: column;
         align-items: center;
