--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,7 +1,7 @@
 .Logo {
   width: 480px;
   height: 100vh;
-  background: #fff;
+  background: #042F36;
   display: flex;
   flex-direction: column;
   align-items: center;
