--- a/src/components/Reviews/reviewsSwiper.scss
+++ b/src/components/Reviews/reviewsSwiper.scss
@@ -41,6 +41,9 @@
   &:hover {
     background-color: #647E82;
   }
+  @media (max-width: 1280px) {
+    left: 45.5% !important;
+  }
 
   @media (max-width: 1024px) {
     left: 45.5% !important;
@@ -48,6 +51,9 @@
 
   @media (max-width: 770px) {
     left: 44.5% !important;
+  }
+  @media (max-width: 650px) {
+    left: 40% !important;
   }
   @media (max-width: 390px) {
     left: 37% !important;
@@ -67,9 +73,6 @@
   @media (max-width: 1024px) {
     right: 45.5% !important;
   }
-  @media (max-width: 1024px) {
-    right: 44.5% !important;
-  }
 
   @media (max-width: 450px) {
     right: 37% !important;
@@ -78,8 +81,6 @@
     right: 37% !important;
   }
 }
-
-// Общие стили для Swiper
 .swiper {
   width: 100%;
   height: 100%;
