--- a/src/components/Reviews/Reviews.module.scss
+++ b/src/components/Reviews/Reviews.module.scss
@@ -7,6 +7,7 @@
   background-image: url("../../assets/images/reviews_bg.svg") !important;
   align-items: center;
   background-size: cover;
+  background-position: center;
   z-index: 2;
   padding: 40px 0 20px;
 
