--- a/src/components/Events/Events.module.scss
+++ b/src/components/Events/Events.module.scss
@@ -1,13 +1,14 @@
 .Events {
   max-width: 1440px;
   margin: 0 auto;
+  height: auto;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   gap: 1rem;
   padding: 0 0 50px 0;
 
 
-  align-items: center;
 
   section {
     padding: 50px 0;
