--- a/src/components/Events/swiper.scss
+++ b/src/components/Events/swiper.scss
@@ -7,14 +7,19 @@
 
 .test {
   width: 100%;
-  height: 100vh !important;
   position: relative;
+
+  @media (max-width: 650px) {
+    height: 1100px !important;
+  }
+
 }
 
 .eventsSwiper-item {
   gap: 10px;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   @media (max-width: 1280px) {
     gap: 40px;
   }
@@ -25,7 +30,17 @@
   @media (max-width: 768px) {
     overflow: visible;
     gap: 20px;
+    max-height: 1000px !important;
+
   }
+
+  @media (max-width: 768px) {
+    overflow: visible;
+    gap: 50px;
+
+  }
+
+
   @media (max-width: 450px) {
     justify-content: flex-start !important;
   }
@@ -101,20 +116,20 @@
 
 .eventsSwiper-item {
   //overflow: hidden;
-  height: 100%;
+  //height: 100%;
   width: 100%;
 }
 
 .swiper {
   width: 100%;
-  height: 100%;
+  height: 90%;
 }
 
-.swiper-slide {
+.swiper-slide1 {
   font-size: 18px;
   background: #fff;
 
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start !important; ;
 }
