added adaptive for 2560px

--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -1,7 +1,7 @@
 .cards {
   //padding: 20px;
-  background-color: #fff;
-  min-height: 100vh;
+  background-color: #042F36;
+
 
   .title {
     text-align: center;
