--- a/src/components/Reviews/Review/Review.module.scss
+++ b/src/components/Reviews/Review/Review.module.scss
@@ -14,4 +14,15 @@
     width: 100%;
     height: auto;
   }
+
+
+  @media (max-width: 2560px) {
+    width: 450px !important;
+  height: 500px !important;
+  }
+
+  @media (max-width: 1440px) {
+    width: 372px !important;
+    height: 423px !important;
+  }
 }
