--- a/src/components/Gallery/GalleryImage/GalleryImage.module.scss
+++ b/src/components/Gallery/GalleryImage/GalleryImage.module.scss
@@ -1,6 +1,7 @@
 .card {
+  flex-grow: 1;
   cursor: pointer;
-  width: 380px;
+  width: 25%;
   height: 564px;
   transform-origin: right center;
   transition: transform 0.4s ease;
@@ -9,7 +10,7 @@
     transform: scale(1.15);
   }
   img {
-    width: 380px;
+    width: 100%;
     height: 100%;
   }
 
@@ -19,7 +20,6 @@
 @media (max-width: 1290px) {
   .card{
     width: 341px !important;
-
 
     &:hover{
       transform: scale(1);
@@ -40,7 +40,6 @@
   .card{
     width: 371px !important;
     height: 582px !important;
-
 
     &:hover{
       transform: scale(1);
