--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,10 @@
   background-image: url("../../assets/images/bg.svg");
   background-size: cover;
 
+  @media (max-width: 3840px) {
+    height: 40vh;
+  }
+
   @media (max-width: 2560px) {
     height: 60vh;
   }
